objects/Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>Vehicle_as_Expected__c</fullName>
        <inlineHelpText>If this is left unchecked Reason not as expected should be populated</inlineHelpText>
        <label>Vehicle as Expected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rd_Party_Grounding_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party Grounding Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Days_with_Onboarding__c</fullName>
        <formula>Date_Completed__c - DATEVALUE (CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days with Onboarding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_days_from_Completed_to_Hand_Off__c</fullName>
        <description>Measures the amount of time it takes a completed Onboarding Case to be assigned an IST Account manager via hand off to field.</description>
        <formula>Date_of_hand_off__c - Date_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of days from Completed to Hand Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Onboarding</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>All_Time_Purchases__c</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>Title_Received_at_ACV__c</columns>
        <columns>Title_Sent_to_Customer__c</columns>
        <columns>ACV_Transport__c</columns>
        <columns>Date_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Onboarding__c.Dealer</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Choose_your_fate</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Recommendation__c</columns>
        <columns>Auction_ID__c</columns>
        <columns>Account_Name__c</columns>
        <columns>All_Time_Purchases__c</columns>
        <columns>BDR__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Recommendation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>6) Ready To Move - Needs Reccommendation</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_4_In_Progress_OBS_Queue_Heather</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Dealership_ID__c</columns>
        <columns>Auction_ID__c</columns>
        <columns>High_Potential_Account__c</columns>
        <columns>Recommendation__c</columns>
        <columns>All_Time_Purchases__c</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>Title_Received_at_ACV__c</columns>
        <columns>Additional_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Copy of 4) In Progress - OBS Queue</label>
    </listViews>
    <listViews>
        <fullName>Get_it_Started</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Auction_ID__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>1) Not Started - Landing Zone</label>
    </listViews>
    <listViews>
        <fullName>Help_i_m_stuck_in_OBS</fullName>
        <columns>Date_Completed__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Dealership_ID__c</columns>
        <columns>Territory__c</columns>
        <columns>IST_Account_Manager__c</columns>
        <columns>Date_of_hand_off__c</columns>
        <columns>Handoff_To__c</columns>
        <columns>Recommendation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>All_Time_Purchases__c</columns>
        <columns>Additional_Comments__c</columns>
        <columns>of_Days_with_Onboarding__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Handoff_To__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Recommendation__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Recommendation__c</field>
            <operation>notEqual</operation>
            <value>Inactivate</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Onboarding__c.Dealer</value>
        </filters>
        <label>Help i&apos;m stuck in OBS</label>
    </listViews>
    <listViews>
        <fullName>How_not_to_FTB</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Auction_ID__c</columns>
        <columns>Date_of_FTB__c</columns>
        <columns>BDR__c</columns>
        <columns>Additional_Comments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>equals</operation>
        </filters>
        <label>2) Payment Not Selected - Finalization</label>
    </listViews>
    <listViews>
        <fullName>My_Onboarding_Records</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Dealership_ID__c</columns>
        <columns>Date_of_FTB__c</columns>
        <columns>All_Time_Purchases__c</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>Slips_Sent__c</columns>
        <columns>Title_Received_at_ACV__c</columns>
        <columns>Title_Sent_to_Customer__c</columns>
        <columns>Delivered__c</columns>
        <columns>ACV_Transport__c</columns>
        <columns>Vehicle_as_Expected__c</columns>
        <columns>Date_of_hand_off__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Onboarding Records</label>
    </listViews>
    <listViews>
        <fullName>Not_cleared</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Dealership_ID__c</columns>
        <columns>BDR__c</columns>
        <columns>Auction_ID__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>Additional_Comments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Payment_Cleared__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>3) Payment Not Cleared - Payments Queue</label>
    </listViews>
    <listViews>
        <fullName>OBS_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Recommendation__c</columns>
        <columns>ACV_Transport__c</columns>
        <columns>Auction_ID__c</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>Title_Received_at_ACV__c</columns>
        <columns>Title_Sent_to_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>OBS In Progress</label>
    </listViews>
    <listViews>
        <fullName>Oregon_Trail</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Dealership_ID__c</columns>
        <columns>Auction_ID__c</columns>
        <columns>High_Potential_Account__c</columns>
        <columns>Recommendation__c</columns>
        <columns>All_Time_Purchases__c</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>Title_Received_at_ACV__c</columns>
        <columns>Additional_Comments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>4) In Progress - OBS Queue</label>
    </listViews>
    <listViews>
        <fullName>Overall_OBS_moves</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Dealership_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Date_Time_Recommendation__c</columns>
        <columns>Recommendation__c</columns>
        <columns>Date_of_hand_off__c</columns>
        <columns>Handoff_To__c</columns>
        <columns>Additional_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Handoff_To__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Recommendation__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Recommendation__c</field>
            <operation>notEqual</operation>
            <value>Inactivate</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Onboarding__c.Dealer</value>
        </filters>
        <label>9) Overall OBS Accounts Moving</label>
    </listViews>
    <listViews>
        <fullName>Put_the_past_behind_you</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Auction_ID__c</columns>
        <columns>of_Days_with_Onboarding__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Handoff_To__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>8) My Past Account Moves - Historical</label>
    </listViews>
    <listViews>
        <fullName>Waiting_on_titles</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Dealership_ID__c</columns>
        <columns>BDR__c</columns>
        <columns>Auction_ID__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Payment_Cleared__c</columns>
        <columns>Additional_Comments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Title_Received_at_ACV__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>5) Titles not Recieved - Titles Queue</label>
    </listViews>
    <listViews>
        <fullName>You_re_still_here</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Dealership_ID__c</columns>
        <columns>Date_Time_Recommendation__c</columns>
        <columns>Date_of_hand_off__c</columns>
        <columns>All_Time_Purchases__c</columns>
        <columns>Recommendation__c</columns>
        <columns>Territory__c</columns>
        <columns>IST_Account_Manager__c</columns>
        <columns>Handoff_To__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Recommendation__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Handoff_To__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Recommendation__c</field>
            <operation>notEqual</operation>
            <value>Inactivate</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Onboarding__c.Dealer</value>
        </filters>
        <label>7) Completed - Accounts Moving</label>
    </listViews>
    <listViews>
        <fullName>moved_yesterday</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Dealership_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Handoff_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Handoff_To__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>moved  yesterday</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{00000}</displayFormat>
        <label>Onboarding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding</pluralLabel>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fleet_Lease</fullName>
        <active>true</active>
        <label>Fleet/Lease</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_modify_FTB_Acution</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Auction_ID__c ) , ISPICKVAL( Status__c , &apos;Completed&apos;) )</errorConditionFormula>
        <errorMessage>FTB cannot be modified if  the status is Completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Docs_must_be_reviewed_to_be_complete</fullName>
        <active>false</active>
        <description>In order to mark Onboarding as Completed, the Registration Docs Reviewed checkbox must equal true.</description>
        <errorConditionFormula>AND (ISPICKVAL(Status__c ,&quot;Completed&quot;), Onboarding_Docs_Reviewed__c=false)</errorConditionFormula>
        <errorMessage>You must review all documents and check off &apos;Registration Docs Reviewed&apos; before marking the record as Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Handoff_Date_Required</fullName>
        <active>true</active>
        <description>Requires that if the hand off to field is filled in the handoff date must be completed</description>
        <errorConditionFormula>AND(ISBLANK (Date_of_hand_off__c),  Handoff_To__c  &lt;&gt; null)</errorConditionFormula>
        <errorMessage>Date of Handoff must be completed.  Contact your Salesforce administrator with any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Other_Reason_not_as_expected</fullName>
        <active>true</active>
        <description>Reason not as expected of &quot;Other&quot; requires the Other Reason expected field to be populated</description>
        <errorConditionFormula>AND(
Ispickval(Reason_Not_as_Expected__c,&quot;Other&quot;),
ISBLANK(
Other_Reason_Not_as_Expected__c)
)</errorConditionFormula>
        <errorDisplayField>Other_Reason_Not_as_Expected__c</errorDisplayField>
        <errorMessage>Reason not as expected of &quot;Other&quot; requires the Other Reason expected field to be populated</errorMessage>
    </validationRules>
</CustomObject>